--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,19 @@
 <% provide(:title, 'All Products') %>
 <div class='col' id='prd-indx-form'>
   <h5><%= @user.username %> 's Products</h5>
-  <div class='row row-cols-12 row-cols-sm-6 row-cols-md-4' id='prd-indx-lists'>
-    <% @products.each do |product| %>
-      <div class='col-12 col-sm-4 col-md-3'>
-        <%= link_to user_container_product_path(@user, product.container_id, product), class: 'link-to-do' do %>
-          <div id='prd-indx-info'>
-            <p><%= product.name %></p>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
+  <% if @products.present? %>
+    <div class='row row-cols-12 row-cols-sm-6 row-cols-md-4' id='prd-indx-lists'>
+      <% @products.each do |product| %>
+        <div class='col-12 col-sm-4 col-md-3'>
+          <%= link_to user_container_product_path(@user, product.container_id, product), class: 'link-to-do' do %>
+            <div id='prd-indx-info'>
+              <p><%= product.name %></p>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <h4>No products found</h4>
+  <% end %>
 </div>
