--- a/app/views/layouts/_breadcrumb.html.erb
+++ b/app/views/layouts/_breadcrumb.html.erb
@@ -7,10 +7,5 @@
       <i class='fas fa-search fa-2x srch-icon'></i>
     <% end %>
   </ol>
-  <div id='search-zone'>
-    <form method='get' action='#' class='search_container'>
-      <input type='text' size='25' placeholder='Search'>
-      <input type='submit' value='&#xf002'>
-    </form>
-  </div>
+  <%= render 'layouts/search_form' %>
 </nav>
