add system spec tests for searching

--- a/app/views/layouts/_search_form.html.erb
+++ b/app/views/layouts/_search_form.html.erb
@@ -1,5 +1,5 @@
 <div id='search-zone'>
-  <%= form_tag(user_products_path, method: 'get', class: 'search_container') do %>
+  <%= form_tag(user_products_path(user_id: current_user), method: 'get', class: 'search_container') do %>
     <%= text_field_tag :search, '', placeholder: 'Search' %>
     <%= button_tag type: 'submit', class: 'btn btn-primary' do %>
       <i class='fas fa-search'></i>
