--- a/app/views/layouts/_breadcrumb.html.erb
+++ b/app/views/layouts/_breadcrumb.html.erb
@@ -7,5 +7,7 @@
       <i class='fas fa-search fa-2x srch-icon'></i>
     <% end %>
   </ol>
-  <%= render 'layouts/search_form' %>
+  <% if user_signed_in? && current_user.products.present? %>
+    <%= render 'layouts/search_form' %>
+  <% end %>
 </nav>
