delete turbolinks gem

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -3,7 +3,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <script src='https://kit.fontawesome.com/e419acac98.js' crossorigin='anonymou'></script>
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
