install chartkick gem and make it display

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,6 +13,7 @@
         </div>
       <% end %>
     </div>
+    <%= pie_chart @data %>
   <% else %>
     <h4>No products found</h4>
   <% end %>
