--- a/app/views/deadline_alerts/index.html.erb
+++ b/app/views/deadline_alerts/index.html.erb
@@ -1,18 +1,23 @@
 <% provide(:title, 'Results') %>
 <div class='row' id='ddln-form'>
-  <% @expired_deadline_alerts.each do |deadline| %>
-    <div class='deadline_expired col-12 col-md-6 col-lg-4'>
-      <%= render 'deadline_fields', deadline: deadline %>
-    </div>
-  <% end %>
-  <% @warning_deadline_alerts.each do |deadline| %>
-    <div class='deadline_warning col-12 col-md-6 col-lg-4'>
-      <%= render 'deadline_fields', deadline: deadline %>
-    </div>
-  <% end %>
-  <% @recommend_deadline_alerts.each do |deadline| %>
-    <div class='deadline_recommend col-12 col-md-6 col-lg-4'>
-      <%= render 'deadline_fields', deadline: deadline %>
-    </div>
+  <% if @user.deadline_alerts.present? %>
+    <%= pie_chart @data, colors: ['red', 'orange', '#83e698'] %>
+    <% @expired_deadline_alerts.each do |deadline| %>
+      <div class='deadline_expired col-12 col-md-6 col-lg-4'>
+        <%= render 'deadline_fields', deadline: deadline %>
+      </div>
+    <% end %>
+    <% @warning_deadline_alerts.each do |deadline| %>
+      <div class='deadline_warning col-12 col-md-6 col-lg-4'>
+        <%= render 'deadline_fields', deadline: deadline %>
+      </div>
+    <% end %>
+    <% @recommend_deadline_alerts.each do |deadline| %>
+      <div class='deadline_recommend col-12 col-md-6 col-lg-4'>
+        <%= render 'deadline_fields', deadline: deadline %>
+      </div>
+    <% end %>
+  <% else %>
+    <h5>No Alerts found</h5>
   <% end %>
 </div>
