fix some css and indents

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -544,6 +544,9 @@ a {
 }
 
 /* deadline-alert index */
+.alert-chart {
+  margin: 0 auto;
+}
 #ddln-form {
   margin-bottom: 20px;
   .deadline_expired,
