--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Edit User') %>
-<div id='main-form' class='col-12 col-sm-10 col-md-8'>
+<div id='main-form' class='col-sm-10 col-md-8'>
   <%= bootstrap_form_for @user do |f| %>
     <%= f.text_field :username, autofocus: true, autocomplete: 'username', help: 'Only half-width English numbers and letters' %>
     <%= f.email_field :email, autofocus: true, autocomplete: 'email' %>
