--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @user.username) %>
-<div id='user-profile-form' class='col-12 col-sm-10 col-md-8'>
+<div id='user-profile-form' class='col-sm-10 col-md-8'>
   <h3><%= @user.username %></h3>
   <hr class='my-4'>
   <% if @user.containers.present? %>
