create tag form for products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,11 @@
 <% provide(:title, 'All Products') %>
 <div class='col' id='prd-indx-form'>
   <h5><%= @user.username %> 's Products</h5>
+  <% if params[:tag_name] %>
+    <h6><%= "With Tag: #{params[:tag_name]}" %></h6>
+  <% elsif params[:search]%>
+    <h6><%= "Including keyword: #{params[:search]}" %></h6>
+  <% end %>
   <% if @products.present? %>
     <div class='row row-cols-sm-6 row-cols-md-4' id='prd-indx-lists'>
       <% @products.each do |product| %>
