--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -5,7 +5,8 @@
     <%= f.select :number, [*1..20], {}, {} %>
     <%= f.date_field :product_created_at %>
     <%= f.date_field :product_expired_at %>
-    <%= f.text_area :description, autofocus: true, autocomplete: 'description' %>
+    <%= f.text_field :tag_list, autofocus: true, value: @product.tag_list.join(','), help: "It's optional" %>
+    <%= f.text_area :description, autofocus: true, autocomplete: 'description', help: "It's optional" %>
     <%= f.submit 'Update', class: 'btn btn-primary' %>
   <% end %>
   <div id='sub-info-links'>
