--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,6 +2,15 @@
 <div class='col-md-10' id='prd-shw-form'>
   <h2><%= @product.name %></h2>
   <ul class='col'>
+    <li>
+      <% if @product.tags.present? %>
+        <% @product.tag_list.each do |tag| %>
+          <%= link_to user_products_path(@user, tag_name: tag) do %>
+            <span class='badge badge-secondary'><%= tag %></span>
+          <% end %>
+        <% end %>
+      <% end %>
+    </li>
     <%= link_to user_container_path(@user, @product.container), class: 'link-to-do' do %>
       <li><%= "#{@container.position}: #{@container.name}" %></li>
     <% end %>
