--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -320,6 +320,9 @@ a {
   margin: 0 auto;
   border: 4px solid #e1e1e1;
   border-radius: 8px;
+  h3 {
+    margin-bottom: 35px;
+  }
 }
 
 /* jumbotron */
@@ -469,6 +472,9 @@ a {
 #prd-shw-form {
   margin: 0 auto;
   padding: 40px 15px 15px;
+  .p-tags a {
+    text-decoration: none;
+  }
   h2, ul {
     margin: 0 auto;
   }
