--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Edit Product') %>
 <div id='main-form' class='col-sm-10 col-md-8'>
+  <h3><%= @product.name %></h3>
   <%= bootstrap_form_for @product, url: user_container_product_path do |f| %>
     <%= f.text_field :name, autofocus: true, autocomplete: 'name' %>
     <%= f.select :number, [*1..20], {}, {} %>
