--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 <div class='col-md-10' id='prd-shw-form'>
   <h2><%= @product.name %></h2>
   <ul class='col'>
-    <li>
+    <li class='p-tags'>
       <% if @product.tags.present? %>
         <% @product.tag_list.each do |tag| %>
           <%= link_to user_products_path(@user, tag_name: tag) do %>
