--- a/app/views/layouts/_search_form.html.erb
+++ b/app/views/layouts/_search_form.html.erb
@@ -1,6 +1,7 @@
 <div id='search-zone'>
   <%= form_tag(user_products_path(user_id: current_user), method: 'get', class: 'search_container') do %>
-    <%= text_field_tag :search, '', placeholder: 'Search' %>
+    <%= text_field_tag :search, '', placeholder: 'Search', id: 'search-suggests' %>
+    <%= hidden_field_tag :user_id, '', value: current_user.id %>
     <%= button_tag type: 'submit', class: 'btn btn-primary' do %>
       <i class='fas fa-search'></i>
     <% end %>
