--- a/app/views/containers/edit.html.erb
+++ b/app/views/containers/edit.html.erb
@@ -9,6 +9,7 @@
       <% end %>
     </div>
     <%= f.text_area :description, autofocus: true, autocomplete: 'description', help: "It's optional" %>
+    <%= f.file_field :image, help: "It's optional" %>
     <%= f.submit 'Update', class: 'btn btn-primary' %>
     <div id='sub-info-links'>
       <ul>
