--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -307,6 +307,84 @@ a {
   }
 }
 
+/* footer */
+.site-footer {
+  background-color: #26272b;
+  padding: 15px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  hr {
+    border-top-color: #bbb;
+    opacity: 0.5;
+  }
+  hr.small {
+    margin: 20px 0;
+  }
+  h6 {
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px;
+  }
+  a {
+    color: #737373;
+    &:hover {
+      color: #3366cc;
+      text-decoration: none;
+    }
+  }
+  .container {
+    padding: 0 15px 0 15px;
+  }
+}
+.footer-links {
+  padding-left: 0;
+  list-style: none;
+  li {
+    display: block;
+  }
+  a {
+    color: #737373;
+  }
+  a:active,.footer-links a:focus,.footer-links a:hover {
+    color: #3366cc;
+    text-decoration: none;
+  }
+}
+.footer-links.inline li {
+  display: inline-block;
+}
+.site-footer .social-icons {
+  text-align: right;
+  a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 6px;
+    margin-right: 0;
+    border-radius: 100%;
+    background-color: #33353d;
+  }
+}
+.copyright-text {
+  margin: 0;
+}
+@media (max-width:991px) {
+  .site-footer [class^=col-] {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width:767px) {
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .copyright-text,.site-footer .social-icons {
+    text-align: center;
+  }
+}
+
 /* container */
 .container {
   margin-top: 1em;
@@ -332,6 +410,7 @@ a {
 
 /* jumbotron */
 .jumbotron {
+  margin: 20px 10px;
   border: solid 1px;
 }
 
