--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
       <div class='container'>
         <%= yield %>
       </div>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
   <%= javascript_include_tag 'application' %>
