--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <div class='main-contents'>
       <%= render 'layouts/breadcrumb' %>
       <%= render 'layouts/flash' %>
-      <div class='container'>
+      <div class='container' id='main-container'>
         <%= yield %>
       </div>
       <%= render 'layouts/footer' %>
