--- a/app/views/containers/_container_form.html.erb
+++ b/app/views/containers/_container_form.html.erb
@@ -1,21 +1,21 @@
 <div class='card'>
   <h5 class='card-header'>
-    <%= link_to container.name, user_container_path(user, container), id: 'container-link' %>
-    <%= link_to edit_user_container_path(user, container), class: 'cog-link' do %>
+    <%= link_to container_form.name, user_container_path(container_form.user_id, container_form), id: 'container-link' %>
+    <%= link_to edit_user_container_path(container_form.user_id, container_form), class: 'cog-link' do %>
       <i class='fas fa-cog fa-lg'></i>
     <% end %>
   </h5>
   <div class='card-body'>
-    <h5 class='card-title'>Type: <%= container.position %></h5>
-    <% if container.products.present? %>
-      <h5 class='card-title'>Products: <%= container.products.size %></h5>
+    <h5 class='card-title'>Type: <%= container_form.position %></h5>
+    <% if container_form.products.present? %>
+      <h5 class='card-title'>Products: <%= container_form.products.size %></h5>
     <% end %>
-    <% if container.description.present? %>
+    <% if container_form.description.present? %>
       <div id='cntnr-shw-descrip'>
         <span>Description</span>
-        <p><%= container.description %></p>
+        <p><%= container_form.description %></p>
       </div>
     <% end %>
-    <%= button_to 'Create product', new_user_container_product_path(user, container), method: :get, class: 'btn btn-success' %>
+    <%= button_to 'Create product', new_user_container_product_path(container_form.user_id, container_form), method: :get, class: 'btn btn-success' %>
   </div>
 </div>
