edit deadline index for pagenation and ajax

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -421,7 +421,7 @@ a {
 /* pagenation */
 #pagenation-zone {
   display: flex;
-  margin: 10px 0px;
+  margin: 10px auto;
   nav {
     margin: 0 auto;
   }
