--- a/app/views/deadline_alerts/index.html.erb
+++ b/app/views/deadline_alerts/index.html.erb
@@ -1,25 +1,9 @@
 <% provide(:title, 'Results') %>
-<% if @user.deadline_alerts.present? %>
+<% if @alerts.present? %>
   <div class='col-md-10 col-lg-10 alert-chart'>
     <%= pie_chart @data, colors: ['red', 'orange', '#83e698'] %>
   </div>
-  <div class='row' id='ddln-form'>
-    <% @expired_deadline_alerts.each do |deadline| %>
-      <div class='deadline_expired col-md-6 col-lg-4'>
-        <%= render 'deadline_fields', deadline: deadline %>
-      </div>
-    <% end %>
-    <% @warning_deadline_alerts.each do |deadline| %>
-      <div class='deadline_warning col-md-6 col-lg-4'>
-        <%= render 'deadline_fields', deadline: deadline %>
-      </div>
-    <% end %>
-    <% @recommend_deadline_alerts.each do |deadline| %>
-      <div class='deadline_recommend col-md-6 col-lg-4'>
-        <%= render 'deadline_fields', deadline: deadline %>
-      </div>
-    <% end %>
-  </div>
+  <%= render 'deadline_lists', alerts: @alerts %>
 <% else %>
   <h5>No Alerts found</h5>
 <% end %>
