--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
       <div class='col-xs-6 col-md-3'>
         <h6>Quick Links</h6>
         <ul class='footer-links'>
-          <li><a href='#'>About</a></li>
+          <li><%= link_to 'About', about_path %></li>
           <li><a href='#'>Contact</a></li>
           <li><a href='#'>Privacy Policy</a></li>
         </ul>
