--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,7 +5,7 @@
       <div class='about-column'>
         <ul>
           <li><h2>Step 1</h2></li>
-          <li><i class='fas fa-archive'></i></li>
+          <li><i class='fas fa-archive' data-toggle='modal' data-target='#step1Modal'></i></li>
           <li><h5>Create Container</h5></li>
         </ul>
       </div>
@@ -40,3 +40,4 @@
     </li>
   </ul>
 </div>
+<%= render 'step1_modal' %>
