create step2 modal in home#about oage

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,7 +5,9 @@
       <div class='about-column'>
         <ul>
           <li><h2>Step 1</h2></li>
-          <li><i class='fas fa-archive' data-toggle='modal' data-target='#step1Modal'></i></li>
+          <li>
+            <i class='fas fa-archive' data-toggle='modal' data-target='#step1Modal'></i>
+          </li>
           <li><h5>Create Container</h5></li>
         </ul>
       </div>
@@ -14,7 +16,9 @@
       <div class='about-column'>
         <ul>
           <li><h2>Step 2</h2></li>
-          <li><i class='fas fa-hamburger'></i></li>
+          <li>
+            <i class='fas fa-hamburger' data-toggle='modal' data-target='#step2Modal'></i>
+          </li>
           <li><h5>Create Products</h5></li>
         </ul>
       </div>
@@ -23,7 +27,9 @@
       <div class='about-column'>
         <ul>
           <li><h2>Step 3</h2></li>
-          <li><i class='fas fa-exclamation-circle'></i></li>
+          <li>
+            <i class='fas fa-exclamation-circle'></i>
+          </li>
           <li><h5>Check Alerts</h5></li>
         </ul>
       </div>
@@ -41,3 +47,4 @@
   </ul>
 </div>
 <%= render 'step1_modal' %>
+<%= render 'step2_modal' %>
