--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,10 @@
 <div id='user-profile-form' class='col-sm-10 col-md-8'>
   <h3><%= @user.username %></h3>
   <hr class='my-4'>
+  <div id='email-info'>
+    <h5>Email: </h5>
+    <p><%= @user.email %></p>
+  </div>
   <% if @containers.present? %>
     <h5>Containers</h5>
     <%= column_chart @data %>
