--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,15 @@
 <% provide(:title, 'Home') %>
 <% if user_signed_in? && current_user.products.present? %>
-  <%= button_to '賞味期限をチェック', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+  <div class='home-topic'>
+    <h4>Let's check the Expiration Date</h4>
+    <%= button_to 'Check Expiration Date', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+  </div>
 <% elsif user_signed_in? %>
-  a
+  <div class='home-topic col-sm-10 col-md-8'>
+    <h3>You haven't create any products</h3>
+    <p>please create products</p>
+    <button type='button' class='btn btn-lg btn-primary' disabled>Check Expiration Date</button>
+  </div>
 <% else %>
   <div class='jumbotron'>
     <h1 class='display-4'>Welcome to Freedger</h1>
