set step3 modal in home#about

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -28,7 +28,7 @@
         <ul>
           <li><h2>Step 3</h2></li>
           <li>
-            <i class='fas fa-exclamation-circle'></i>
+            <i class='fas fa-exclamation-circle' data-toggle='modal' data-target='#step3Modal'></i>
           </li>
           <li><h5>Check Alerts</h5></li>
         </ul>
@@ -48,3 +48,4 @@
 </div>
 <%= render 'step1_modal' %>
 <%= render 'step2_modal' %>
+<%= render 'step3_modal' %>
