--- a/app/views/home/_step2_modal.html.erb
+++ b/app/views/home/_step2_modal.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class='modal-body'>
         <h6>
-          1: After finishing create the container, you need to access to all containers page.
+          1: After you created the container, you need to access to all containers page.
         </h6>
         <%= image_tag 'step3.png', size: '270x350'%>
         <hr>
