change image config

--- a/app/views/home/_step1_modal.html.erb
+++ b/app/views/home/_step1_modal.html.erb
@@ -13,12 +13,12 @@
         <h6>
           1: After signup or signin, you can access to create the contaner from the sidebar.
         </h6>
-        <%= image_tag 'step1.png', size: '270x300'%>
+        <%= image_tag '/assets/step1.png', size: '270x300'%>
         <hr>
         <h6>
           2: When you create the container, you can choose Fridge or Freezer as container's type.
         </h6>
-        <%= image_tag 'step2.png', size: '350x400'%>
+        <%= image_tag '/assets/step2.png', size: '350x400'%>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
