change to asset-path for images

--- a/app/views/home/_step3_modal.html.erb
+++ b/app/views/home/_step3_modal.html.erb
@@ -13,12 +13,12 @@
         <h6>
           1: After you created products, let's access to top page and push "Check Expiration Date" button. 
         </h6>
-        <%= image_tag '/assets/step6.png', size: '300x300'%>
+        <%= image_tag asset_path('step6.png'), size: '300x300'%>
         <hr>
         <h6>
           2: When pushing the button, Alerts would be displayed and they have 3 types which are "Expired", "Warning" and "Recommend".
         </h6>
-        <%= image_tag '/assets/step7.png', size: '300x320'%>
+        <%= image_tag asset_path('step7.png'), size: '300x320'%>
         <hr>
         <h6>
           3: "Expired" would tell us the product's expiration date is already over.
