--- a/app/views/home/_step2_modal.html.erb
+++ b/app/views/home/_step2_modal.html.erb
@@ -13,17 +13,17 @@
         <h6>
           1: After you created the container, you need to access to all containers page.
         </h6>
-        <%= image_tag asset_path('step3.png'), size: '270x350'%>
+        <%= image_tag 'step3.jpg', size: '270x350'%>
         <hr>
         <h6>
           2: If container-form displayed successfully, please push the button "Create Product".
         </h6>
-        <%= image_tag asset_path('step4.png'), size: '300x300'%>
+        <%= image_tag 'step4.jpg', size: '300x300'%>
         <hr>
         <h6>
           3: In the form, you need to fill the Name, Quantity, Production_Date and Expiration_Date at least.
         </h6>
-        <%= image_tag asset_path('step5.png'), size: '270x400'%>
+        <%= image_tag 'step5.jpg', size: '270x400'%>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
