edit alerts pdf to put alerts-data

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -738,6 +738,14 @@ a {
 }
 
 /* deadline-alert index */
+#pdf-link {
+  text-align: center;
+  margin: 15px auto;
+  width: 250px;
+  border-bottom: solid 2px;
+  border-top: solid 2px;
+  padding: 10px 0;
+}
 .alert-chart {
   margin: 0 auto;
 }
