--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,11 @@
 <% if user_signed_in? && current_user.products.present? %>
   <div class='home-topic'>
     <h4>Let's check the Expiration Date</h4>
-    <%= button_to 'Check Expiration Date', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+    <% if current_user.deadline_alerts.present? %>
+      <%= button_to 'Update Alerts', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+    <% else %>
+      <%= button_to 'Check Expiration Date', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+    <% end %>
   </div>
 <% elsif user_signed_in? %>
   <div class='home-topic col-sm-10 col-md-8'>
