change eng to jp in home page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,7 +8,7 @@
           <li>
             <i class='fas fa-archive' data-toggle='modal' data-target='#step1Modal'></i>
           </li>
-          <li><h5>Create Container</h5></li>
+          <li><h5>コンテナを作成</h5></li>
         </ul>
       </div>
     </div>
@@ -19,7 +19,7 @@
           <li>
             <i class='fas fa-hamburger' data-toggle='modal' data-target='#step2Modal'></i>
           </li>
-          <li><h5>Create Products</h5></li>
+          <li><h5>飲食料品の登録</h5></li>
         </ul>
       </div>
     </div>
@@ -30,7 +30,7 @@
           <li>
             <i class='fas fa-exclamation-circle' data-toggle='modal' data-target='#step3Modal'></i>
           </li>
-          <li><h5>Check Alerts</h5></li>
+          <li><h5>アラートを確認</h5></li>
         </ul>
       </div>
     </div>
