--- a/app/views/home/_step2_modal.html.erb
+++ b/app/views/home/_step2_modal.html.erb
@@ -3,7 +3,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title'>
-          Create Products
+          飲食料品の登録
         </h5>
         <button type='button' class='close' data-dismiss='modal'>
           <span aria-hidden='true'>&times;</span>
@@ -11,7 +11,7 @@
       </div>
       <div class='modal-body'>
         <h6>
-          1: After you created the container, you need to access to all containers page.
+          1: コンテナを作成後、サイドバーからコンテナ一覧にアクセスすることができます。
         </h6>
         <%= image_tag 'step3.jpg', size: '270x350'%>
         <hr>
