--- a/app/views/layouts/_header_links.html.erb
+++ b/app/views/layouts/_header_links.html.erb
@@ -2,7 +2,7 @@
   <li>
     <%= link_to root_path do %>
       <i class='fas fa-home fa-2x'></i>
-      <span id='home_span'>Home</span>
+      <span id='home_span'>ホーム</span>
     <% end %>
   </li>
   <% if user_signed_in? %>
@@ -15,20 +15,20 @@
     <li>
       <%= link_to edit_user_path(current_user) do %>
         <i class='fas fa-user-edit fa-2x' id='useredit_icon'></i>
-        <span id='useredit_span'>Edit User</span>
+        <span id='useredit_span'>ユーザー 編集</span>
       <% end %>
     </li>
     <li>
       <%= link_to new_user_container_path(current_user) do %>
         <i class='fas fa-box-open fa-2x' id='c_user_icon'></i>
-        <span id='c_con_span'>Create Container</span>
+        <span id='c_con_span'>コンテナ 作成</span>
       <% end %>
     </li>
     <% if current_user.containers.present? %>
       <li>
         <%= link_to user_containers_path(current_user) do %>
           <i class='fas fa-boxes fa-2x' id='containers_icon'></i>
-          <span id='all_c_span'>All Containers</span>
+          <span id='all_c_span'>コンテナ 一覧</span>
         <% end %>
       </li>
     <% end %>
@@ -36,7 +36,7 @@
       <li>
         <%= link_to user_products_path(current_user) do %>
           <i class='fas fa-utensils fa-2x' id='products_icon'></i>
-          <span id='all_p_span'>All Products</span>
+          <span id='all_p_span'>飲食料品 一覧</span>
         <% end %>
       </li>
     <% end %>
@@ -44,7 +44,7 @@
       <li>
         <%= link_to user_deadline_alerts_path(current_user) do %>
           <i class='fas fa-exclamation-circle fa-2x' id='alerts_icon'></i>
-          <span id='alert_span'>Alerts</span>
+          <span id='alert_span'>アラート 一覧</span>
         <% end %>
       </li>
     <% end %>
