change eng to jp in container page and user page

--- a/app/views/containers/index.html.erb
+++ b/app/views/containers/index.html.erb
@@ -1,2 +1,2 @@
-<% provide(:title, 'All Containers') %>
+<% provide(:title, 'コンテナ 一覧') %>
 <%= render partial: 'container_form', collection: @containers %>
