--- a/app/views/containers/_container_form.html.erb
+++ b/app/views/containers/_container_form.html.erb
@@ -6,16 +6,16 @@
     <% end %>
   </h5>
   <div class='card-body'>
-    <h5 class='card-title'>Type: <%= container_form.position %></h5>
+    <h5 class='card-title'>タイプ: <%= container_form.position %></h5>
     <% if container_form.products.present? %>
-      <h5 class='card-title'>Products: <%= container_form.products.size %></h5>
+      <h5 class='card-title'>飲食料品: <%= container_form.products.size %></h5>
     <% end %>
     <% if container_form.description.present? %>
       <div id='cntnr-shw-descrip'>
-        <span>Description</span>
+        <span>説明</span>
         <p><%= container_form.description %></p>
       </div>
     <% end %>
-    <%= button_to 'Create product', new_user_container_product_path(container_form.user_id, container_form), method: :get, class: 'btn btn-success' %>
+    <%= button_to '飲食料品を登録する', new_user_container_product_path(container_form.user_id, container_form), method: :get, class: 'btn btn-success' %>
   </div>
 </div>
