--- a/app/views/containers/edit.html.erb
+++ b/app/views/containers/edit.html.erb
@@ -1,20 +1,20 @@
-<% provide(:title, 'Edit Container') %>
+<% provide(:title, 'コンテナ 編集') %>
 <div id='main-form' class='col-sm-10 col-md-8'>
   <%= bootstrap_form_for @container, url: user_container_path do |f| %>
-    <%= f.text_field :name, autofocus: true, autocomplete: 'name' %>
+    <%= f.text_field :name, label: 'コンテナ名', autofocus: true, autocomplete: 'name' %>
     <div id='radio-inputs'>
-      <%= f.form_group :position, label: { text: 'Container type' } do %>
-        <%= f.radio_button :position, 'Fridge', label: 'Fridge', checked: true %>
-        <%= f.radio_button :position, 'Freezer', label: 'Freezer' %>
+      <%= f.form_group :position, label: { text: 'タイプ' } do %>
+        <%= f.radio_button :position, 'Fridge', label: 'Fridge(冷蔵庫)', checked: true %>
+        <%= f.radio_button :position, 'Freezer', label: 'Freezer(冷凍庫)' %>
       <% end %>
     </div>
-    <%= f.text_area :description, autofocus: true, autocomplete: 'description', help: "It's optional" %>
-    <%= f.file_field :image, help: "It's optional" %>
-    <%= f.submit 'Update', class: 'btn btn-primary' %>
+    <%= f.text_area :description, autofocus: true, autocomplete: 'description', label: '説明文', help: '任意' %>
+    <%= f.file_field :image, label: 'イメージ', help: '任意' %>
+    <%= f.submit '更新', class: 'btn btn-primary' %>
     <div id='sub-info-links'>
       <ul>
         <% if @user.id == current_user.id %>
-          <li><%= link_to 'Delete container', user_container_path(@user, @container), method: :delete, data: { confirm: 'You sure?' }, id: 'delete-btn' %></li>
+          <li><%= link_to 'コンテナを削除', user_container_path(@user, @container), method: :delete, data: { confirm: Settings.delete_confirm_msg }, id: 'delete-btn' %></li>
         <% end %>
       </ul>
     </div>
