--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,18 @@
 <% provide(:title, 'Home') %>
 <% if user_signed_in? && current_user.products.present? %>
   <div class='home-topic'>
-    <h4>Let's check the Expiration Date</h4>
+    <h4>消費期限をチェックしましょう！</h4>
     <% if current_user.deadline_alerts.present? %>
-      <%= button_to 'Update Alerts', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+      <%= button_to '消費期限のアラートを更新', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
     <% else %>
-      <%= button_to 'Check Expiration Date', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
+      <%= button_to '消費期限をチェック', user_deadline_alerts_path(current_user), class: 'btn btn-primary' %>
     <% end %>
   </div>
 <% elsif user_signed_in? %>
   <div class='home-topic col-sm-10 col-md-8'>
-    <h3>You haven't create any products</h3>
-    <p>please create products</p>
-    <button type='button' class='btn btn-lg btn-primary' disabled>Check Expiration Date</button>
+    <h3>コンテナに飲食料品が登録されていません。</h3>
+    <p>コンテナを作成もしくは飲食料品を登録してください。</p>
+    <button type='button' class='btn btn-lg btn-primary' disabled>消費期限をチェック</button>
   </div>
 <% else %>
   <div class='jumbotron'>
