--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,21 +1,21 @@
-<% provide(:title, 'Edit Product') %>
+<% provide(:title, '飲食料品 編集') %>
 <div id='main-form' class='col-sm-10 col-md-8'>
   <h3><%= @product.name %></h3>
   <%= bootstrap_form_for @product, url: user_container_product_path do |f| %>
-    <%= f.text_field :name, autofocus: true, autocomplete: 'name' %>
-    <%= f.select :number, [*1..20], {}, {} %>
-    <%= f.date_field :product_created_at %>
-    <%= f.date_field :product_expired_at %>
-    <%= f.text_field :tag_list, autofocus: true, value: @product.tag_list.join(','), help: "It's optional" %>
-    <%= f.text_area :description, autofocus: true, autocomplete: 'description', help: "It's optional" %>
-    <%= f.file_field :image, help: "It's optional" %>
-    <%= f.submit 'Update', class: 'btn btn-primary' %>
+    <%= f.text_field :name, label: '飲食料品名', autofocus: true, autocomplete: 'name' %>
+    <%= f.select :number, [*1..20], {label: '数'}, {} %>
+    <%= f.date_field :product_created_at, label: '購入・調理日' %>
+    <%= f.date_field :product_expired_at, label: '消費期限' %>
+    <%= f.text_field :tag_list, label: 'タグ', autofocus: true, value: @product.tag_list.join(','), help: '任意 複数指定可' %>
+    <%= f.text_area :description, label: '説明文', autofocus: true, autocomplete: 'description', help: '任意' %>
+    <%= f.file_field :image, label: 'イメージ', help: '任意' %>
+    <%= f.submit '更新', class: 'btn btn-primary' %>
   <% end %>
   <div id='sub-info-links'>
     <ul>
       <% if @user.id == current_user.id %>
         <li>
-          <%= link_to 'Delete product', user_container_product_path(@user, @container, @product), method: :delete, data: { confirm: 'You sure?' }, id: 'delete-btn' %>
+          <%= link_to '飲食料品を削除', user_container_product_path(@user, @container, @product), method: :delete, data: { confirm: Settings.delete_confirm_msg }, id: 'delete-btn' %>
         </li>
       <% end %>
     </ul>
