--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,15 +1,15 @@
-<% provide(:title, 'Create Product') %>
+<% provide(:title, '飲食料品 登録') %>
 <div id='main-form' class='col-sm-10 col-md-8'>
   <h3><%= "In #{@container.name}" %></h3>
   <%= bootstrap_form_for @product, url: user_container_products_path do |f| %>
     <%= f.hidden_field :user_id, value: @user.id %>
-    <%= f.text_field :name, autofocus: true, autocomplete: 'name' %>
-    <%= f.select :number, [*1..20], {selected: 1}, {} %>
-    <%= f.date_field :product_created_at %>
-    <%= f.date_field :product_expired_at %>
-    <%= f.text_field :tag_list, autofocus: true, value: @product.tag_list.join(','), placeholder: 'hoge, foobar', help: "It's optional" %>
-    <%= f.text_area :description, autofocus: true, autocomplete: 'description', help: "It's optional" %>
-    <%= f.file_field :image, help: "It's optional" %>
-    <%= f.submit 'Create', class: 'btn btn-primary' %>
+    <%= f.text_field :name, label: '飲食料品名', autofocus: true, autocomplete: 'name' %>
+    <%= f.select :number, [*1..20], {label: '数', selected: 1}, {} %>
+    <%= f.date_field :product_created_at, label: '購入・調理日' %>
+    <%= f.date_field :product_expired_at, label: '消費期限' %>
+    <%= f.text_field :tag_list, label: 'タグ', autofocus: true, value: @product.tag_list.join(','), placeholder: 'hoge, foobar', help: '任意 複数指定可' %>
+    <%= f.text_area :description, label: '説明文', autofocus: true, autocomplete: 'description', help: '任意' %>
+    <%= f.file_field :image, label: 'イメージ', help: '任意' %>
+    <%= f.submit '登録', class: 'btn btn-primary' %>
   <% end %>
 </div>
