--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,17 +19,17 @@
     <%= link_to user_container_path(@product.user_id, @product.container_id), class: 'link-to-do' do %>
       <li><%= "#{@container.position}: #{@container.name}" %></li>
     <% end %>
-    <li><%= "Quantity: #{@product.number}" %></li>
-    <li><%= "Created_at: #{@product.product_created_at}" %></li>
-    <li><%= "Expiration_date: #{@product.product_expired_at}" %></li>
+    <li><%= "数: #{@product.number}" %></li>
+    <li><%= "購入・調理日: #{@product.product_created_at}" %></li>
+    <li><%= "消費期限: #{@product.product_expired_at}" %></li>
     <% if @product.description.present? %>
-      <li><%= "Description: #{@product.description}" %></li>
+      <li><%= "説明文: #{@product.description}" %></li>
     <% end %>
     <div id='edt-delt-icons'>
       <%= link_to edit_user_container_product_path(@product.user_id, @product.container_id, @product), class: 'link-to-do edt-icon' do %>
         <i class='fas fa-edit fa-lg'></i>
       <% end %>
-      <%= link_to user_container_product_path(@product.user_id, @product.container_id, @product), method: :delete, data: { confirm: 'You sure?' }, class: 'link-to-do dlt-icon' do %>
+      <%= link_to user_container_product_path(@product.user_id, @product.container_id, @product), method: :delete, data: { confirm: Settings.delete_confirm_msg }, class: 'link-to-do dlt-icon' do %>
         <i class='fas fa-trash-alt fa-lg'></i>
       <% end %>
     </div>
