change eng to jp in home about page

--- a/app/views/home/_step1_modal.html.erb
+++ b/app/views/home/_step1_modal.html.erb
@@ -13,12 +13,12 @@
         <h6>
           1: ユーザー登録及びログイン完了後、サイドバーからコンテナ作成を選択してください。
         </h6>
-        <%= image_tag 'step1.jpg', size: '270x300'%>
+        <%= image_tag 'step1_1.jpg', size: '270x300'%>
         <hr>
         <h6>
           2: コンテナを作成する際は、「冷蔵庫」と「冷凍庫」のどちらか２種類を指定することができます。
         </h6>
-        <%= image_tag 'step2.jpg', size: '350x400'%>
+        <%= image_tag 'step1_2.jpg', size: '350x400'%>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
