--- a/app/views/home/_step2_modal.html.erb
+++ b/app/views/home/_step2_modal.html.erb
@@ -11,19 +11,19 @@
       </div>
       <div class='modal-body'>
         <h6>
-          1: コンテナを作成後、サイドバーからコンテナ一覧にアクセスすることができます。
+          1: コンテナを作成後、サイドバーから 'コンテナ一覧' にアクセスします。
         </h6>
-        <%= image_tag 'step3.jpg', size: '270x350'%>
+        <%= image_tag 'step2_1.jpg', size: '270x350'%>
         <hr>
         <h6>
-          2: If container-form displayed successfully, please push the button "Create Product".
+          2: 次に、コンテナの情報フォームの中にある ’飲食料品を登録する’ ボタンを押してください。
         </h6>
-        <%= image_tag 'step4.jpg', size: '300x300'%>
+        <%= image_tag 'step2_2.jpg', size: '400x350'%>
         <hr>
         <h6>
-          3: In the form, you need to fill the Name, Quantity, Production_Date and Expiration_Date at least.
+          3: 登録フォームでは、最低でも名前、数、購入・調理日、消費期限を入力する必要があります。
         </h6>
-        <%= image_tag 'step5.jpg', size: '270x400'%>
+        <%= image_tag 'step2_3.jpg', size: '380x500'%>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
